--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,11 @@
+@import './common.css';
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,15 +13,71 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+footer {
+ 
+  background-color: var(--bright-color);
+  margin-right: 50px;
+  transition: margin-right .5s;
+
+}
+
+footer div {
+ margin: auto;
+ padding: 15px;
+}
+
+nav {
+  height: 40px;
+  opacity: 80%;
+  background-color: var(--side-menu-color);
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
+  align-items: center;
+  position: sticky;
+  top:0;
+  width: 100%;
+  z-index: 10;
+}
+
+.sign-in-span {
+  cursor: pointer;
+  color: #fff;
+}
+
+.sign-in-span:hover {
+  text-decoration: underline;
+}
+
+.title {
+  margin: auto;
+  margin-top: 100px;
+}
+
+.sign-in {
+
+  margin: 10px
+}
+
+.header {
+  background-color: var(--bcg-color);
+  min-height: 10vh;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.main {
+  margin-right: 50px;
+  background-color: var(--bcg-color);
+  transition: margin-right .5s;
+  min-height: 100vh;
+  color: white;
+  background-image: url('./img/black-woman-using-mobile-phone-london-underground2.jpg');
+  background-size: auto 155vh;
+  background-repeat: no-repeat;
+  background-color: var(--bcg-color);
+  background-attachment: fixed;
 }
 
 .App-link {
@@ -32,6 +88,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
